bk_ida/gccida/c2/doloop_optimize
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1250:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v21; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1285:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v56; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1299:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v70; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1308:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v79; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1310:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v81; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1316:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v87; // [rsp+14h] [rbp-94h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1318:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v89; // [rsp+24h] [rbp-84h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1324:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code comparison; // [rsp+54h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1503:24: error: invalid suffix 'xmode' on integer constant
if ( v87 == *(short *)0xmode 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1504:41: error: invalid suffix 'xmode' on integer constant
|| ( *( ( _BYTE *)v35 + 2) = *(short *)0xmode, 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1531:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v41.rtwint = ( __int64)v39->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1550:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v48.rtwint = ( __int64)condition->fld[0]; 
                       ^~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1559:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v53.rtwint = ( __int64)op1->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1562:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v54.rtwint = ( __int64)op1->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1628:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v73 + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/doloop.c:1647:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v76 + 2), 
  ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/doloop_optimize/src/obj/doloop.o] Error 1
